--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "ember-cli-babel": "^5.1.3",
     "ember-cli-htmlbars": "^0.7.9",
     "ember-cli-sass": "^5.1.0",
-    "ember-infinity": "^0.1.2",
+    "ember-in-viewport": "2.0.4",
     "ember-truth-helpers": "^1.0.0"
   },
   "ember-addon": {
