--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
     "ember-faker": "1.1.0",
+    "ember-get-helper": "1.0.4",
     "ember-suave": "1.2.3",
     "ember-try": "0.0.8"
   },
