--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,8 @@
     "loader.js": "ember-cli/loader.js#3.2.1",
     "qunit": "~1.18.0",
     "showdown": "~1.3.0"
+  },
+  "devDependencies": {
+    "StickyTableHeaders": "~0.1.19"
   }
 }
