--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "jquery": "2.1.4",
     "loader.js": "ember-cli/loader.js#3.2.1",
     "qunit": "~1.18.0",
-    "showdown": "~1.3.0"
+    "showdown": "~1.3.0",
+    "font-awesome": "~4.5.0"
   }
 }
