--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ember-composability": "0.2.1",
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.0",
+    "ember-drag-drop": "0.3.0",
     "ember-export-application-global": "^1.0.3",
     "ember-faker": "1.1.0",
     "ember-get-helper": "1.0.4",
